ChangeLog for package XiMpLe

changes in version 0.03-16 (2012-11-05)
added:
  - added examples to all functions
  - added a vignette
fixed:
  - fixed dropping of last tag/text value if XML was incomplete, e.g., just
    an excerpt of a full tree
  - fixed handling of empty tags completely without space, e.g. "<br/>"
    instead of "<br />"
  - parsing error for DOCTYPE nodes mixed up elements and previously ignored
    the "decl" value

changes in version 0.03-15 (2012-10-26)
fixed:
  - eliminated a memory problem for large XML trees. calling unlist() with
    use.names=FALSE really makes a difference...
changed:
  - reviewed the garbage collecting and internally moved it out of
    XML.nodes() into XML.single.tags()

changes in version 0.03-14 (2012-05-11)
added:
  - forcing garbage collection gc() in internal function XML.nodes(), which
    iterates through parsed XML trees
changed:
  - better handling of text value indentation via "shine" and "tidy"

changes in version 0.03-13 (2012-04-19)
added:
  - added a LICENSE file
  - debianized the sources
changed:
  - parseXMLTree() now takes connections as "file" parameter
  - commented CDATA tags (like they're used in XHTML) can now be detected and
    pasted
  - pasteXMLTag() adjusts indentation level of value tags and comments
fixed:
  - feeding internet addresses to parseXMLTree() no longer throws an error,
    skipping normalize.path() then now
  - parseXMLTree() now preserves newlines in value tags and comments

changes in version 0.03-12 (2012-03-18)
  - node() now also works with single XiMpLe.node objects (not only full
    trees)
  - added pasteXML methods to paste objects of classes XiMpLe.node and
    XiMpLe.doc in a more general manner. the former functions pasteXMLNode() and
    pasteXMLTree() are replaced by mere wrapper frunctions to pasteXML() and
    should not be used any longer.
  - fixed dropped text value if node also had child nodes in pasteXML()